completed tables done

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -528,3 +528,8 @@ section#section-modal form {
 section#section-modal form .btn-primary {
   background: var(--global-color-orange);
 }
+
+
+#schedule .table-responsive.hide-table {
+  display: none;
+}
