--- a/templates/admin/schedule.html
+++ b/templates/admin/schedule.html
@@ -82,8 +82,16 @@
               class="btn btn-primary"
               data-bs-toggle="modal"
               data-bs-target="#reservationModal"
+              id="show_modal_btn2"
             >
               Reserve Entry
+            </button>
+            <button
+              type="button"
+              class="btn btn-info"
+              id="toggleTableBtn"
+            >
+              Completed Table
             </button>
           </div>
           <div
@@ -126,7 +134,7 @@
                     </div>
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn-primary">RESERVE</button>
+                    <button type="submit" class="btn-primary">RESERVE</button>
                   </div>
                 </div>
               </form>
@@ -184,7 +192,7 @@
                     </div>
                   </div>
                   <div class="modal-footer">
-                    <button type="button" type="submit" class="btn-primary">
+                    <button type="submit" class="btn-primary">
                       Submit
                     </button>
                   </div>
@@ -192,7 +200,8 @@
               </form>
             </div>
           </div>
-          <div class="table-responsive">
+          <div class="table-responsive" id="reservations-table">
+            <p>Reservation Table</p>
             <table>
               <thead>
                 <th>Reservation Date</th>
@@ -248,6 +257,14 @@
                           />
                         </svg>
                       </button>
+                      <button
+                        type="submit"
+                        name="complete"
+                        class="btn btn-danger"
+                        title="Complete item"
+                      >
+                      <i class="bi bi-check2-all"></i>
+                      </button>
                       {% else %} {% endif %}
                       <a
                         href="#"
@@ -264,6 +281,47 @@
                         title="Delete"
                       >
                         <i class="bi bi-trash3"></i>
+                      </button>
+                      
+                      
+                    </form>
+                  </td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </div>
+          <div class="table-responsive hide-table" id="completed-table">
+            <p>Completed Table</p>
+            <table>
+              <thead>
+                <th>Full name</th>
+                <th>Email</th>
+                <th>Address</th>
+                <th>Age</th>
+                <th>Sex</th>
+                <th>Cancer Type</th>
+                <th>Reservation Date</th>
+                <th>Delete</th>
+              </thead>
+              <tbody>
+                {% for i in all_completed %}
+                <tr>
+                  <td>{{ i.name }}</td>
+                  <td>{{ i.email }}</td>
+                  <td>{{ i.address }}</td>
+                  <td>{{ i.age }}</td>
+                  <td>{{ i.sex }}</td>
+                  <td>{{ i.cancer_type }}</td>
+                  <td>{{ i.reservation_date }}</td>
+                  <td>
+                    <form action="/admin/completed/delete/{{ i.id }}" method="post">
+                      <button 
+                      type="submit"
+                       name="delete"
+                       class="btn btn-danger"
+                       title="delete">
+                       <i class="bi bi-trash3"></i>
                       </button>
                     </form>
                   </td>
@@ -289,35 +347,31 @@
     crossorigin="anonymous"
   ></script>
   <script>
-    var view_patient = document.getElementById("view-patient");
-    view_patient.addEventListener("click", function () {
-      axios
-        .get(
-          `/admin/api/get-patient/${view_patient.getAttribute("data-value")}`
-        )
-        .then((response) => {
-          var data = response.data;
-          var message =
-            "Name: " +
-            data.name +
-            "\nAge: " +
-            data.age +
-            "\nCancer Type: " +
-            data.cancer_type +
-            "\nEmail: " +
-            data.email +
-            "\nMunicipality: " +
-            data.municipality +
-            "\nProvince: " +
-            data.province +
-            "\nSex: " +
-            data.sex;
-          alert(message);
-        })
-        .catch((error) => {
-          alert("Error fetching data");
-        });
-    });
+    $(document).ready(function() {
+    $('#view-patient').click(function() {
+          var dataValue = $(this).data('value');
+          
+          $.ajax({
+              url: `/admin/api/get-patient/${dataValue}`,
+              method: 'GET',
+              success: function(response) {
+                  var data = response;
+                   var message =
+                      "Name: " + data.name +
+                      "\nAge: " + data.age +
+                      "\nCancer Type: " + data.cancer_type +
+                      "\nEmail: " + data.email +
+                      "\nMunicipality: " + data.municipality +
+                      "\nProvince: " + data.province +
+                      "\nSex: " + data.sex;
+                  alert(message); 
+              },
+              error: function() {
+                  alert("Error fetching data");
+              }
+          });
+      });
+  
 
     var section_modal = document.getElementById("section-modal");
     var close_modal_btn = document.getElementById("close_modal_btn");
@@ -328,8 +382,31 @@
       $("#editModal").modal("show");
     });
 
-    close_modal_btn.addEventListener("click", function () {
-      section_modal.style.display = "none";
+
+    $(close_modal_btn).click(function (event) {
+      event.preventDefault()
+      $(section_modal).css("display: none");
     });
+
+    $("#toggleTableBtn").click(function (event) {
+      event.preventDefault();
+      console.log("Toggle button clicked");
+      
+      var completedTable = $("#schedule #completed-table");
+      var reservationsTable = $("#schedule #reservations-table");
+
+      if (completedTable.hasClass('hide-table')) {
+        $("#toggleTableBtn").text("Reservations Table")
+        completedTable.removeClass('hide-table');
+        reservationsTable.addClass('hide-table');
+        $("#show_modal_btn2").css("display", "none");
+      } else {
+        $("#toggleTableBtn").text("Completed Table")
+        reservationsTable.removeClass('hide-table');
+        completedTable.addClass('hide-table');
+        $("#show_modal_btn2").css("display", "block");
+      }
+    });
+  });
   </script>
 </html>
