--- a/templates/index.html
+++ b/templates/index.html
@@ -128,6 +128,7 @@
                   Maguindanao del Norte
                 </option>
                 <option value="Maguindanao del Sur">Maguindanao del Sur</option>
+                <option value="Manila">Manila</option>
                 <option value="Marinduque">Marinduque</option>
                 <option value="Masbate">Masbate</option>
                 <option value="Misamis Occidental">Misamis Occidental</option>
