--- a/templates/patient/dashboard.html
+++ b/templates/patient/dashboard.html
@@ -110,7 +110,7 @@
           <h2>CONTACT US</h2>
           <div class="contact-list">
             <div class="contact-widget">
-              <img src="" alt="" />
+              <img src="{{ url_for('static', filename='img/office_address.png') }}" alt="Image" />
               <p>Our Address</p>
               <p>
                 1131 San Marcelino Street, Paco, Metro Manila PH, Manila,
@@ -118,7 +118,7 @@
               </p>
             </div>
             <div class="contact-widget">
-              <img src="" alt="" />
+              <img src="{{ url_for('static', filename='img/general_enquiries.png') }}" alt="Image" />
               <p>General Enquiries</p>
               <p>Email: bahayaruga001@gmail.com</p>
             </div>
